--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Primary Meta Tags -->
     <title>Vaccine Notifications</title>
+    <meta name="title" content="Vaccine Notifications">
+    <meta name="description" content="Receive Relevant Vaccine Alerts">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vaccinenotifications.org/">
+    <meta property="og:title" content="Vaccine Notifications">
+    <meta property="og:description" content="Receive Relevant Vaccine Alerts">
+    <meta property="og:image" content="https://vaccinenotifications.org/splash.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://vaccinenotifications.org/">
+    <meta property="twitter:title" content="Vaccine Notifications">
+    <meta property="twitter:description" content="Receive Relevant Vaccine Alerts">
+    <meta property="twitter:image" content="https://vaccinenotifications.org/splash.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
